# perpetuals-trading-dep

./: .env.example  .gitignore  DATABRICKS_SYNC.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml  deploy-sol-perp-pages.yml  sol-perp-data.yml
scripts/: build_sol_perp_chart_data.py  protect_html.py  push-to-github.ps1
sol-perp/: README.md  data.json  index.html
src/perpetuals_trading_dep/: __init__.py  __main__.py
src/perpetuals_trading_dep/exchanges/: __init__.py  clients.py  config.py
tests/: test_public_ping.py
